--- a/style4.css
+++ b/style4.css
@@ -442,8 +442,7 @@ h3.card_product_welcom {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  margin: 0px 400px;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
@@ -458,11 +457,13 @@ form.card_product_innervariable {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin: 0px 220px 0px 220px;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   padding-top: 67px;
   border-top: 1px solid #eaeaea;
+  margin: 0px 350px 0px 350px;
 }
 
 p.innervariable_textname {
@@ -477,21 +478,20 @@ p.innervariable_textname {
   line-height: 24px;
   font-weight: 700;
   color: #2f2f2f;
-  margin: 20px 0px 0px 0px;
+  margin: 0px;
 }
 
 button.submit_product {
+  margin: 0px 30px 0px 30px;
   background-color: #ffffff;
   border: 1px solid #ef5b70;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 10px 30px 10px 30px;
+  padding: 10px 0px 10px 0px;
 }
 
 button.submit_product:hover {
@@ -518,7 +518,7 @@ select.body_color {
   line-height: 24px;
   font-weight: 400;
   color: #bcbcbc;
-  margin: 16px 15px 0px 0px;
+  margin: 16px 0px 0px 0px;
   padding: 5px 60px 5px 10px;
 }
 
@@ -527,7 +527,7 @@ select.body_lengt {
   line-height: 24px;
   font-weight: 400;
   color: #bcbcbc;
-  margin: 16px 15px 0px 0px;
+  margin: 16px 0px 0px 0px;
   padding: 5px 60px 5px 10px;
 }
 
@@ -552,16 +552,330 @@ input.product_vivi {
   line-height: 24px;
   font-weight: 400;
   max-width: 130px;
-  margin: 16px 10px 0px 0px;
+  margin: 16px 0px 0px 0px;
   padding-left: 10px;
+}
+
+.boxlinner__paragraf {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 70px 135px 0px 135px;
+  padding: 20px 0px;
+  border-bottom: 1px solid #eaeaea;
+}
+
+.boxlinner__paragraf_position {
+  margin: 0px;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: -0.015em;
+  color: #222222;
+}
+
+.boxlinner__paragraf__text {
+  margin-right: 310px;
+}
+
+.boxlinner_paragraf__textline {
+  margin: 20px 150px 0px 135px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #eaeaea;
+}
+
+.boxlinner_paragraf__textline_boximage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0px;
+}
+
+.boxlinner_paragraf__textline_boximage_image {
+  margin: 0px;
+  max-width: 120px;
+}
+
+.boxlinner_paragraf__textline_boximage_textbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 0px 120px 40px 20px;
+}
+
+.boxlinner_paragraf__textline_boximage_textbox_text {
+  margin: 0px;
+  margin: 0px;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #222222;
+}
+
+.boxlinner_paragraf__textline_boximage_textbox_text__span {
+  font-weight: 300;
+  color: #6f6e6e;
+}
+
+.boxlinner_paragraf__textline__content {
+  margin: 0px;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #656565;
+}
+
+.boxlinner_paragraf__textline__content_setuser {
+  max-width: 60px;
+  padding-left: 18px;
+}
+
+.boxlinner__bottom-dooble {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 44px 150px 63px 135px;
+}
+
+.boxlinner__bottom-dooble_bottom-options-all {
+  margin: 0px;
+  padding: 20px 39px;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #4a4a4a;
+}
+
+.form-boxlinner-info-price_containe {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0px 135px 130px 135px;
+}
+
+.form-boxlinner-info-price_containe__box-database-set {
+  margin: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.form-boxlinner-info-price_containe__box-database-set_user-adress {
+  margin: 0px;
+  padding-bottom: 20px;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+}
+
+.form-boxlinner-info-price_containe__box-database-set_user-adress_state {
+  margin: 20px 0px;
+  padding: 16px 150px 16px 18px;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #b1b1b1;
+  border: 1px solid #eaeaea;
+  outline: none;
+}
+
+.form-boxlinner-info-price_containe__box-database-set_user-adress_more {
+  margin: 0px 0px 20px 0px;
+  padding: 16px 150px 16px 18px;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #b1b1b1;
+  border: 1px solid #eaeaea;
+  outline: none;
+}
+
+.form-boxlinner-info-price_containe__box-database-set_state {
+  margin: 20px 0px;
+  padding: 16px 150px 16px 18px;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #b1b1b1;
+  border: 1px solid #eaeaea;
+  outline: none;
+}
+
+.form-boxlinner-info-price_containe__box-database-set_user-adress_variable {
+  margin: 0px;
+  margin: 0px;
+  padding: 16px 150px 16px 18px;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #b1b1b1;
+  border: 1px solid #eaeaea;
+  outline: none;
+}
+
+.form-boxlinner-info-price_containe__box-database-set_user-adress_button-set-inform {
+  margin: 0px;
+}
+
+.form-boxlinner-info-price_containe__box-database-set_user-adress_button-set-inform {
+  margin: 0px;
+  max-width: 120px;
+  padding: 12px 15px;
+  font-size: 11px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+}
+
+.form-boxlinner-info-price_containe__box-database-set-inform {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0px 30px;
+}
+
+.form-boxlinner-info-price_containe__box-database-set-inform_user-adress_state {
+  margin: 20px 0px;
+  padding: 16px 150px 16px 18px;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #b1b1b1;
+  border: 1px solid #eaeaea;
+  outline: none;
+}
+
+.form-boxlinner-info-price_containe__box-database-set-inform_user-adress {
+  margin: 0px;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+}
+
+.form-boxlinner-info-price_containe__box-database-set-inform_user-adress_span {
+  display: block;
+  padding-top: 20px;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #000000;
+}
+
+.form-boxlinner-info-price_containe__box-database-set-inform_user-adress_button-set-inform {
+  margin: 0px;
+  max-width: 130px;
+  padding: 10px 15px;
+  font-size: 11px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+}
+
+.form-boxlinner-info-price_containe__box-set-play-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0px 0px 60px 0px;
+  padding: 30px 30px 0px 30px;
+  background-color: #f5f3f3;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+}
+
+.form-boxlinner-info-price_containe__box-set-play-list_mini-price {
+  margin: 0px;
+  font-size: 11px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #4a4a4a;
+}
+
+.form-boxlinner-info-price_containe__box-set-play-list__max-price {
+  margin: 0px;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #eaeaea;
+}
+
+.form-boxlinner-info-price_containe__box-set-play-list__max-price__span {
+  color: #f16d7f;
+}
+
+.form-boxlinner-info-price_containe__box-set-play-list_button-user {
+  margin: 20px 0px 0px 0px;
+  padding: 19px 42px;
+  background-color: #f16d7f;
+  border: 1px solid #f16d7f;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 .card_box_selection {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   margin: 0px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -571,308 +885,38 @@ input.product_vivi {
 h2.card_product_namecolection {
   font-size: 18px;
   line-height: 24px;
-  font-weight: 900;
-  text-transform: uppercase;
-  color: #4d4d4d;
-  max-width: 400px;
-  padding: 15px 0px 67px 0px;
 }
 
-hr.red_brij {
-  margin: 0px 575px 0px 577px;
-  border: 1px solid #eaeaea;
+.karusel {
+  background-color: #f7f7f7;
+  padding-bottom: 50px;
+  max-width: 100%;
+  min-height: 700px;
 }
 
-hr.gray_brij {
-  margin: -3px 624px 17px 613px;
-  border: 2px solid #ef5b70;
+.karusel_image_newimage {
+  max-width: 100%;
 }
 
-p.card_product_textproduct {
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 300;
-  color: #5e5e5e;
-  max-width: 500px;
-  padding-bottom: 28px;
-}
-
-p.atributes_product_text {
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #b9b9b9;
-  margin: 0px;
-  padding: 10px;
-}
-
-span.material_variable {
-  color: #2f2f2f;
-}
-
-span.atribut_variable {
-  color: #2f2f2f;
-}
-
-p.card_product_praise {
-  font-size: 24px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #ef5b70;
-  padding-bottom: 47px;
-}
-
-a.navgation_clik {
-  font-weight: 700;
-  color: #f16d7f;
-}
-
-nav.cardbar_card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 0px 50px 0px 50px;
-}
-
-.cardbar_card_product {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  position: relative;
-  margin: 0;
-  padding: 0px 0px 30px 0px;
-}
-
-.box_media_card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  position: relative;
-  margin: 0;
-}
-
-.product_text {
-  margin: 0px;
-  padding: 15px 90px 10px 17px;
-  font-size: 13px;
-  line-height: 1.2;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #222222;
-  max-width: 261px;
-}
-
-.product_text_price {
-  display: block;
-  padding: 15px 0px 0px 0px;
-  font-size: 16px;
-  line-height: 1.2;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #f16d7f;
-}
-
-.blackblok_button {
-  display: none;
-  position: absolute;
-  z-index: 1;
-  max-width: 120px;
-  top: 120px;
-  left: 70px;
-  padding: 10px 10px 10px 10px;
-  background-color: rgba(255, 255, 255, 0);
-  border: 1px solid #ffffff;
-}
-
-.cardbar_card_product:hover .poduct_image {
-  -webkit-filter: brightness(30%);
-          filter: brightness(30%);
-}
-
-.corp {
-  padding-right: 5px;
-  width: 25px;
-  height: 20px;
-}
-
-.corp_text {
-  font-size: 13px;
-  line-height: 1.2;
-  font-weight: 700;
-  color: #ffffff;
-}
-
-.cardbar_card_product:hover .product_text {
-  background-color: #ffffff;
-  -webkit-box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
-}
-
-.cardbar_card_product:hover .blackblok {
-  display: block;
-  opacity: 50%;
-}
-
-.cardbar_header_megatex {
-  font-size: 24px;
-  line-height: 20px;
-  font-weight: 900;
-  text-transform: uppercase;
-  color: #4d4d4d;
-  padding: 119px 0px 72px 0px;
-  text-align: center;
-}
-
-.cardbar_card_product:hover .blackblok_button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.blackblok_button:hover {
-  -webkit-box-shadow: 0px 12px 12px 10px rgba(255, 255, 255, 0.15);
-          box-shadow: 0px 12px 12px 10px rgba(255, 255, 255, 0.15);
-}
-
-.cardbar_megabutton {
-  display: block;
-  position: relative;
-  text-align: center;
-  line-height: 70px;
-  max-width: 250px;
-  background-color: #f16d7f;
-  margin: 50px 0px 150px 550px;
-}
-
-.cardbar_megabutton_text {
-  font-size: 16px;
-  line-height: 54px;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #ffffff;
-  padding-right: 30px;
-}
-
-img.prevcard {
-  position: absolute;
-  top: 23px;
-  left: 200px;
-}
-
-img.prevcard:hover {
-  background-color: #ee5368;
-}
-
-.bannershot {
+.karusel_image {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-bottom: 100px;
-}
-
-.banner_image_sopf {
-  position: relative;
-  max-width: 767px;
-  height: 529px;
   overflow: hidden;
-  margin: 0px;
+  max-width: 500px;
+  max-height: 600px;
+  padding-top: 30px;
 }
 
-.banner_list {
-  margin: 0px;
+.panel_slaider_options1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-p.banner_text {
-  font-size: 20px;
-  line-height: 1.2;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #fbfbfb;
-  max-width: 250px;
-}
-
-span.text_info {
-  display: block;
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 300;
-  letter-spacing: 0.025em;
-  color: #fbfbfb;
-}
-
-.headerbanner {
-  position: absolute;
-  top: 130px;
-  left: 50px;
-}
-
-.headerbanner_text {
-  font-size: 53.7px;
-  line-height: 1.2;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #ffffff;
-}
-
-span.text_color {
-  color: #f16d7f;
-}
-
-span.text_stand {
-  display: block;
-  font-size: 32.2px;
-}
-
-.banner_mega_box {
-  margin: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #222224;
-  padding: 0px 30px 0px 20px;
-}
-
-.banner_imgicon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 0px 10px 10px 0px;
+  position: relative;
+  top: 350px;
 }
 
 .manage_boxcontent {
@@ -890,7 +934,6 @@ span.text_stand {
   background-image: url("fonmanage.png");
   background-repeat: round;
   min-height: 438px;
-  margin-top: 50px;
 }
 
 .manage_monolog {
@@ -1343,4 +1386,4 @@ i.fa-brands:hover {
   background-color: #f16d7f;
   color: #ffffff;
 }
-/*# sourceMappingURL=style2.css.map */
+/*# sourceMappingURL=style4.css.map */
