--- a/style5.css
+++ b/style5.css
@@ -415,122 +415,6 @@ p.navigation_brij {
   color: #636363;
 }
 
-.card_product.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  background-color: #ffffff;
-  border: 1px solid #eaeaea;
-  padding: 90px 0px 90px 0px;
-  margin-top: -50px;
-}
-
-h3.card_product_welcom {
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #f16d7f;
-  max-width: 200px;
-  padding-bottom: 15px;
-}
-
-.card_product_atributes_product {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding-bottom: 37px;
-}
-
-form.card_product_innervariable {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding-top: 67px;
-  border-top: 1px solid #eaeaea;
-}
-
-p.innervariable_textname {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #2f2f2f;
-  margin: 20px 0px 0px 0px;
-}
-
-button.submit_product {
-  background-color: #ffffff;
-  border: 1px solid #ef5b70;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 10px 30px 10px 30px;
-}
-
-button.submit_product:hover {
-  background-color: #fdfdfd;
-  border: 1px solid #e9455d;
-  cursor: pointer;
-}
-
-p.text_button_copf {
-  font-size: 16px;
-  line-height: 1.7;
-  font-weight: 700;
-  color: #ef5b70;
-  margin: 0px;
-  padding-left: 15px;
-}
-
-img.icon_copf {
-  margin: 0px;
-}
-
-select.body_color {
-  font-size: 13px;
-  line-height: 24px;
-  font-weight: 400;
-  color: #bcbcbc;
-  margin: 16px 15px 0px 0px;
-  padding: 5px 60px 5px 10px;
-}
-
-select.body_lengt {
-  font-size: 13px;
-  line-height: 24px;
-  font-weight: 400;
-  color: #bcbcbc;
-  margin: 16px 15px 0px 0px;
-  padding: 5px 60px 5px 10px;
-}
-
 ::-webkit-input-placeholder {
   color: #bcbcbc;
 }
@@ -547,260 +431,66 @@ select.body_lengt {
   color: #bcbcbc;
 }
 
-input.product_vivi {
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 400;
-  max-width: 130px;
-  margin: 16px 10px 0px 0px;
-  padding-left: 10px;
-}
-
-.card_box_selection {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 0px;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding-bottom: 28px;
-}
-
-h2.card_product_namecolection {
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: 900;
-  text-transform: uppercase;
-  color: #4d4d4d;
-  max-width: 400px;
-  padding: 15px 0px 67px 0px;
-}
-
-hr.red_brij {
-  margin: 0px 575px 0px 577px;
-  border: 1px solid #eaeaea;
-}
-
-hr.gray_brij {
-  margin: -3px 624px 17px 613px;
-  border: 2px solid #ef5b70;
-}
-
-p.card_product_textproduct {
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 300;
-  color: #5e5e5e;
-  max-width: 500px;
-  padding-bottom: 28px;
-}
-
-p.atributes_product_text {
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #b9b9b9;
-  margin: 0px;
-  padding: 10px;
-}
-
-span.material_variable {
-  color: #2f2f2f;
-}
-
-span.atribut_variable {
-  color: #2f2f2f;
-}
-
-p.card_product_praise {
-  font-size: 24px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #ef5b70;
-  padding-bottom: 47px;
-}
-
-a.navgation_clik {
-  font-weight: 700;
-  color: #f16d7f;
-}
-
-nav.cardbar_card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 0px 50px 0px 50px;
-}
-
-.cardbar_card_product {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  position: relative;
-  margin: 0;
-  padding: 0px 0px 30px 0px;
-}
-
-.box_media_card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  position: relative;
-  margin: 0;
-}
-
-.product_text {
-  margin: 0px;
-  padding: 15px 90px 10px 17px;
-  font-size: 13px;
+.cheking_accordeont__linner_box__paragraf-inform {
+  margin: 33px 260px 0px 260px;
+  padding-bottom: 33px;
+  font-size: 16px;
   line-height: 1.2;
   font-weight: 700;
   text-transform: uppercase;
   color: #222222;
-  max-width: 261px;
+  border-bottom: 1px solid #e8e8e8;
+  cursor: pointer;
 }
 
-.product_text_price {
-  display: block;
-  padding: 15px 0px 0px 0px;
-  font-size: 16px;
-  line-height: 1.2;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #f16d7f;
+.cheking_accordeont__linner_box_form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 0px 260px 0px 260px;
+  border-bottom: 1px solid #e8e8e8;
 }
 
-.blackblok_button {
-  display: none;
-  position: absolute;
-  z-index: 1;
-  max-width: 120px;
-  top: 120px;
-  left: 70px;
-  padding: 10px 10px 10px 10px;
-  background-color: rgba(255, 255, 255, 0);
-  border: 1px solid #ffffff;
+.cheking_accordeont__linner_box_form__text-input-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0px;
+  padding-bottom: 40px;
 }
 
-.cardbar_card_product:hover .poduct_image {
-  -webkit-filter: brightness(30%);
-          filter: brightness(30%);
-}
-
-.corp {
-  padding-right: 5px;
-  width: 25px;
-  height: 20px;
-}
-
-.corp_text {
+.cheking_accordeont__linner_box_form__text-input-left__paragraf-summary {
+  padding: 20px 0px 31px 0px;
+  margin: 0px;
   font-size: 13px;
   line-height: 1.2;
-  font-weight: 700;
-  color: #ffffff;
-}
-
-.cardbar_card_product:hover .product_text {
-  background-color: #ffffff;
-  -webkit-box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
-}
-
-.cardbar_card_product:hover .blackblok {
-  display: block;
-  opacity: 50%;
-}
-
-.cardbar_header_megatex {
-  font-size: 24px;
-  line-height: 20px;
-  font-weight: 900;
+  font-weight: 400;
   text-transform: uppercase;
-  color: #4d4d4d;
-  padding: 119px 0px 72px 0px;
-  text-align: center;
+  color: #222222;
 }
 
-.cardbar_card_product:hover .blackblok_button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.blackblok_button:hover {
-  -webkit-box-shadow: 0px 12px 12px 10px rgba(255, 255, 255, 0.15);
-          box-shadow: 0px 12px 12px 10px rgba(255, 255, 255, 0.15);
-}
-
-.cardbar_megabutton {
+.cheking_accordeont__linner_box_form__text-input-left__paragraf-summary__paragraf-span {
   display: block;
-  position: relative;
-  text-align: center;
-  line-height: 70px;
-  max-width: 250px;
-  background-color: #f16d7f;
-  margin: 50px 0px 150px 550px;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #b3b2b2;
 }
 
-.cardbar_megabutton_text {
-  font-size: 16px;
-  line-height: 54px;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #ffffff;
-  padding-right: 30px;
-}
-
-img.prevcard {
-  position: absolute;
-  top: 23px;
-  left: 200px;
-}
-
-img.prevcard:hover {
-  background-color: #ee5368;
-}
-
-.bannershot {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 100px;
-}
-
-.banner_image_sopf {
-  position: relative;
-  max-width: 767px;
-  height: 529px;
-  overflow: hidden;
+.cheking_accordeont__linner_box_form__text-input-left__acord-paragraf {
   margin: 0px;
 }
 
-.banner_list {
-  margin: 0px;
+.cheking_accordeont__linner_box_form__text-input-left__form-cheking {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -808,61 +498,54 @@ img.prevcard:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  margin: 0px;
 }
 
-p.banner_text {
-  font-size: 20px;
+.cheking_accordeont__linner_box_form__text-input-left__form-cheking__label-chek {
+  margin: 0px;
+  padding: 0px 0px 21px 0px;
+  font-size: 12px;
   line-height: 1.2;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #fbfbfb;
-  max-width: 250px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #222222;
+  cursor: pointer;
 }
 
-span.text_info {
-  display: block;
+.cheking_accordeont__linner_box_form__text-input-left__button {
+  margin: 28px 110px 0px 0px;
+  padding: 18px 52px;
   font-size: 14px;
-  line-height: 24px;
-  font-weight: 300;
-  letter-spacing: 0.025em;
-  color: #fbfbfb;
-}
-
-.headerbanner {
-  position: absolute;
-  top: 130px;
-  left: 50px;
-}
-
-.headerbanner_text {
-  font-size: 53.7px;
   line-height: 1.2;
   font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #ffffff;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+  cursor: pointer;
 }
 
-span.text_color {
-  color: #f16d7f;
+.cheking_accordeont__linner_box_form__text-input-left__acord-paragraf_summary {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #b3b2b2;
+  padding: 0px 0px 10px 0px;
+  cursor: pointer;
 }
 
-span.text_stand {
-  display: block;
-  font-size: 32.2px;
+.cheking_accordeont__linner_box_form__text-input-left__acord-paragraf__paragraf-details {
+  font-size: 13px;
+  font-weight: 400;
+  color: #b3b2b2;
+  padding-bottom: 25px;
 }
 
-.banner_mega_box {
-  margin: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #222224;
-  padding: 0px 30px 0px 20px;
+.cheking_accordeont__linner_box_form__text-input-left__acord-paragraf__paragraf-details {
+  max-width: 250px;
 }
 
-.banner_imgicon {
+.cheking_accordeont__linner_box_form__text-input-right {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -870,9 +553,99 @@ span.text_stand {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 0px 10px 10px 0px;
+  margin: 0px;
+  padding-bottom: 40px;
+}
+
+.cheking_accordeont__linner_box_form__text-input-right__item-label {
+  margin: 0px;
+  padding-bottom: 16px;
+}
+
+.cheking_accordeont__linner_box_form__text-input-right__item-input {
+  margin: 0px 0px 16px 0px;
+  padding: 15px 110px 15px 15px;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+}
+
+.cheking_accordeont__linner_box_form__text-input-right__text-warning {
+  margin: 0px;
+  padding-bottom: 32px;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #ff0d0d;
+}
+
+.cheking_accordeont__linner_box_form__text-input-right_box-button-reset {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cheking_accordeont__linner_box_form__text-input-right_box-button-reset__input-button {
+  margin-right: 32px;
+  padding: 18px 40px;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+  cursor: pointer;
+}
+
+.cheking_accordeont__linner_box_form__text-input-right_box-button-reset__link-reset-password {
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #222222;
+  cursor: pointer;
+}
+
+em {
+  font-size: 17px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #ff0d0d;
+}
+
+.cheking_accordeont__linner_box .cheking_accordeont__linner_box__paragraf-inform::-webkit-details-marker {
+  display: none;
+}
+
+.cheking_accordeont__linner_box > .cheking_accordeont__linner_box__paragraf-inform {
+  list-style: none;
+}
+
+details[open] summary {
+  border: none;
+}
+
+.cheking_accordeont__linner_box_form__text-input-left__acord-paragraf .cheking_accordeont__linner_box_form__text-input-left__acord-paragraf_summary::-webkit-details-marker {
+  display: none;
+}
+
+.cheking_accordeont__linner_box_form__text-input-left__acord-paragraf > .cheking_accordeont__linner_box_form__text-input-left__acord-paragraf_summary {
+  list-style: none;
+}
+
+.cheking_accordeont__linner_box_form__text-input-left__acord-paragraf .cheking_accordeont__linner_box_form__text-input-left__acord-paragraf_summary:before {
+  content: "\00BB";
+}
+
+.cheking_accordeont__linner_box_form__text-input-left__acord-paragraf[open] .cheking_accordeont__linner_box_form__text-input-left__acord-paragraf_summary {
+  color: #e77d7d;
+}
+
+.cheking_accordeont__linner_box_form__text-input-left__acord-paragraf > .cheking_accordeont__linner_box_form__text-input-left__acord-paragraf_summary:hover {
+  color: #e77d7d;
 }
 
 .manage_boxcontent {
@@ -1343,4 +1116,4 @@ i.fa-brands:hover {
   background-color: #f16d7f;
   color: #ffffff;
 }
-/*# sourceMappingURL=style2.css.map */
+/*# sourceMappingURL=style5.css.map */
